Packages_2024/llvm_20.1.2/llvm/Orc.inc


procedure LLVMOrcExecutionSessionLookup(ES: TLLVMOrcExecutionSessionRef; K: TLLVMOrcLookupKind; SearchOrder: TLLVMOrcCJITDylibSearchOrder; SearchOrderSize: Tsize_t; Symbols: TLLVMOrcCLookupSet;
  SymbolsSize: Tsize_t; HandleResult: TLLVMOrcExecutionSessionLookupHandleResultFunction; Ctx: pointer); cdecl; external libllvm;
procedure LLVMOrcRetainSymbolStringPoolEntry(S: TLLVMOrcSymbolStringPoolEntryRef); cdecl; external libllvm;
procedure LLVMOrcReleaseSymbolStringPoolEntry(S: TLLVMOrcSymbolStringPoolEntryRef); cdecl; external libllvm;
function LLVMOrcSymbolStringPoolEntryStr(S: TLLVMOrcSymbolStringPoolEntryRef): pchar; cdecl; external libllvm;
procedure LLVMOrcReleaseResourceTracker(RT: TLLVMOrcResourceTrackerRef); cdecl; external libllvm;
procedure LLVMOrcResourceTrackerTransferTo(SrcRT: TLLVMOrcResourceTrackerRef; DstRT: TLLVMOrcResourceTrackerRef); cdecl; external libllvm;
function LLVMOrcResourceTrackerRemove(RT: TLLVMOrcResourceTrackerRef): TLLVMErrorRef; cdecl; external libllvm;
procedure LLVMOrcDisposeDefinitionGenerator(DG: TLLVMOrcDefinitionGeneratorRef); cdecl; external libllvm;
procedure LLVMOrcDisposeMaterializationUnit(MU: TLLVMOrcMaterializationUnitRef); cdecl; external libllvm;
function LLVMOrcCreateCustomMaterializationUnit(Name: pchar; Ctx: pointer; Syms: TLLVMOrcCSymbolFlagsMapPairs; NumSyms: Tsize_t; InitSym: TLLVMOrcSymbolStringPoolEntryRef;
  Materialize: TLLVMOrcMaterializationUnitMaterializeFunction; Discard: TLLVMOrcMaterializationUnitDiscardFunction; Destroy: TLLVMOrcMaterializationUnitDestroyFunction): TLLVMOrcMaterializationUnitRef; cdecl; external libllvm;
function LLVMOrcAbsoluteSymbols(Syms: TLLVMOrcCSymbolMapPairs; NumPairs: Tsize_t): TLLVMOrcMaterializationUnitRef; cdecl; external libllvm;
function LLVMOrcLazyReexports(LCTM: TLLVMOrcLazyCallThroughManagerRef; ISM: TLLVMOrcIndirectStubsManagerRef; SourceRef: TLLVMOrcJITDylibRef; CallableAliases: TLLVMOrcCSymbolAliasMapPairs; NumPairs: Tsize_t): TLLVMOrcMaterializationUnitRef; cdecl; external libllvm;
procedure LLVMOrcDisposeMaterializationResponsibility(MR: TLLVMOrcMaterializationResponsibilityRef); cdecl; external libllvm;
function LLVMOrcMaterializationResponsibilityGetTargetDylib(MR: TLLVMOrcMaterializationResponsibilityRef): TLLVMOrcJITDylibRef; cdecl; external libllvm;
function LLVMOrcMaterializationResponsibilityGetExecutionSession(MR: TLLVMOrcMaterializationResponsibilityRef): TLLVMOrcExecutionSessionRef; cdecl; external libllvm;
function LLVMOrcMaterializationResponsibilityGetSymbols(MR: TLLVMOrcMaterializationResponsibilityRef; NumPairs: Psize_t): TLLVMOrcCSymbolFlagsMapPairs; cdecl; external libllvm;
procedure LLVMOrcDisposeCSymbolFlagsMap(Pairs: TLLVMOrcCSymbolFlagsMapPairs); cdecl; external libllvm;
function LLVMOrcMaterializationResponsibilityGetInitializerSymbol(MR: TLLVMOrcMaterializationResponsibilityRef): TLLVMOrcSymbolStringPoolEntryRef; cdecl; external libllvm;
function LLVMOrcMaterializationResponsibilityGetRequestedSymbols(MR: TLLVMOrcMaterializationResponsibilityRef; NumSymbols: Psize_t): PLLVMOrcSymbolStringPoolEntryRef; cdecl; external libllvm;
procedure LLVMOrcDisposeSymbols(Symbols: PLLVMOrcSymbolStringPoolEntryRef); cdecl; external libllvm;
function LLVMOrcMaterializationResponsibilityNotifyResolved(MR: TLLVMOrcMaterializationResponsibilityRef; Symbols: TLLVMOrcCSymbolMapPairs; NumPairs: Tsize_t): TLLVMErrorRef; cdecl; external libllvm;
function LLVMOrcMaterializationResponsibilityNotifyEmitted(MR: TLLVMOrcMaterializationResponsibilityRef; SymbolDepGroups: PLLVMOrcCSymbolDependenceGroup; NumSymbolDepGroups: Tsize_t): TLLVMErrorRef; cdecl; external libllvm;
function LLVMOrcMaterializationResponsibilityDefineMaterializing(MR: TLLVMOrcMaterializationResponsibilityRef; Pairs: TLLVMOrcCSymbolFlagsMapPairs; NumPairs: Tsize_t): TLLVMErrorRef; cdecl; external libllvm;
procedure LLVMOrcMaterializationResponsibilityFailMaterialization(MR: TLLVMOrcMaterializationResponsibilityRef); cdecl; external libllvm;
function LLVMOrcMaterializationResponsibilityReplace(MR: TLLVMOrcMaterializationResponsibilityRef; MU: TLLVMOrcMaterializationUnitRef): TLLVMErrorRef; cdecl; external libllvm;
function LLVMOrcMaterializationResponsibilityDelegate(MR: TLLVMOrcMaterializationResponsibilityRef; Symbols: PLLVMOrcSymbolStringPoolEntryRef; NumSymbols: Tsize_t; Result: PLLVMOrcMaterializationResponsibilityRef): TLLVMErrorRef; cdecl; external libllvm;
function LLVMOrcExecutionSessionCreateBareJITDylib(ES: TLLVMOrcExecutionSessionRef; Name: pchar): TLLVMOrcJITDylibRef; cdecl; external libllvm;
function LLVMOrcExecutionSessionCreateJITDylib(ES: TLLVMOrcExecutionSessionRef; Result: PLLVMOrcJITDylibRef; Name: pchar): TLLVMErrorRef; cdecl; external libllvm;
function LLVMOrcExecutionSessionGetJITDylibByName(ES: TLLVMOrcExecutionSessionRef; Name: pchar): TLLVMOrcJITDylibRef; cdecl; external libllvm;
function LLVMOrcJITDylibCreateResourceTracker(JD: TLLVMOrcJITDylibRef): TLLVMOrcResourceTrackerRef; cdecl; external libllvm;
function LLVMOrcJITDylibGetDefaultResourceTracker(JD: TLLVMOrcJITDylibRef): TLLVMOrcResourceTrackerRef; cdecl; external libllvm;
function LLVMOrcJITDylibDefine(JD: TLLVMOrcJITDylibRef; MU: TLLVMOrcMaterializationUnitRef): TLLVMErrorRef; cdecl; external libllvm;
function LLVMOrcJITDylibClear(JD: TLLVMOrcJITDylibRef): TLLVMErrorRef; cdecl; external libllvm;
procedure LLVMOrcJITDylibAddGenerator(JD: TLLVMOrcJITDylibRef; DG: TLLVMOrcDefinitionGeneratorRef); cdecl; external libllvm;
function LLVMOrcCreateCustomCAPIDefinitionGenerator(F: TLLVMOrcCAPIDefinitionGeneratorTryToGenerateFunction; Ctx: pointer; _Dispose: TLLVMOrcDisposeCAPIDefinitionGeneratorFunction): TLLVMOrcDefinitionGeneratorRef; cdecl; external libllvm;
procedure LLVMOrcLookupStateContinueLookup(S: TLLVMOrcLookupStateRef; Err: TLLVMErrorRef); cdecl; external libllvm;
function LLVMOrcCreateDynamicLibrarySearchGeneratorForProcess(Result: PLLVMOrcDefinitionGeneratorRef; GlobalPrefx: char; Filter: TLLVMOrcSymbolPredicate; FilterCtx: pointer): TLLVMErrorRef; cdecl; external libllvm;
function LLVMOrcCreateDynamicLibrarySearchGeneratorForPath(Result: PLLVMOrcDefinitionGeneratorRef; FileName: pchar; GlobalPrefix: char; Filter: TLLVMOrcSymbolPredicate; FilterCtx: pointer): TLLVMErrorRef; cdecl; external libllvm;
function LLVMOrcCreateStaticLibrarySearchGeneratorForPath(Result: PLLVMOrcDefinitionGeneratorRef; ObjLayer: TLLVMOrcObjectLayerRef; FileName: pchar; TargetTriple: pchar): TLLVMErrorRef; cdecl; external libllvm;
function LLVMOrcCreateNewThreadSafeContext: TLLVMOrcThreadSafeContextRef; cdecl; external libllvm;
function LLVMOrcThreadSafeContextGetContext(TSCtx: TLLVMOrcThreadSafeContextRef): TLLVMContextRef; cdecl; external libllvm;
procedure LLVMOrcDisposeThreadSafeContext(TSCtx: TLLVMOrcThreadSafeContextRef); cdecl; external libllvm;
function LLVMOrcCreateNewThreadSafeModule(M: TLLVMModuleRef; TSCtx: TLLVMOrcThreadSafeContextRef): TLLVMOrcThreadSafeModuleRef; cdecl; external libllvm;
procedure LLVMOrcDisposeThreadSafeModule(TSM: TLLVMOrcThreadSafeModuleRef); cdecl; external libllvm;
function LLVMOrcThreadSafeModuleWithModuleDo(TSM: TLLVMOrcThreadSafeModuleRef; F: TLLVMOrcGenericIRModuleOperationFunction; Ctx: pointer): TLLVMErrorRef; cdecl; external libllvm;
function LLVMOrcJITTargetMachineBuilderDetectHost(Result: PLLVMOrcJITTargetMachineBuilderRef): TLLVMErrorRef; cdecl; external libllvm;
function LLVMOrcJITTargetMachineBuilderCreateFromTargetMachine(TM: TLLVMTargetMachineRef): TLLVMOrcJITTargetMachineBuilderRef; cdecl; external libllvm;
procedure LLVMOrcDisposeJITTargetMachineBuilder(JTMB: TLLVMOrcJITTargetMachineBuilderRef); cdecl; external libllvm;
function LLVMOrcJITTargetMachineBuilderGetTargetTriple(JTMB: TLLVMOrcJITTargetMachineBuilderRef): pchar; cdecl; external libllvm;
procedure LLVMOrcJITTargetMachineBuilderSetTargetTriple(JTMB: TLLVMOrcJITTargetMachineBuilderRef; TargetTriple: pchar); cdecl; external libllvm;
function LLVMOrcObjectLayerAddObjectFile(ObjLayer: TLLVMOrcObjectLayerRef; JD: TLLVMOrcJITDylibRef; ObjBuffer: TLLVMMemoryBufferRef): TLLVMErrorRef; cdecl; external libllvm;
function LLVMOrcObjectLayerAddObjectFileWithRT(ObjLayer: TLLVMOrcObjectLayerRef; RT: TLLVMOrcResourceTrackerRef; ObjBuffer: TLLVMMemoryBufferRef): TLLVMErrorRef; cdecl; external libllvm;
procedure LLVMOrcObjectLayerEmit(ObjLayer: TLLVMOrcObjectLayerRef; R: TLLVMOrcMaterializationResponsibilityRef; ObjBuffer: TLLVMMemoryBufferRef); cdecl; external libllvm;
procedure LLVMOrcDisposeObjectLayer(ObjLayer: TLLVMOrcObjectLayerRef); cdecl; external libllvm;
procedure LLVMOrcIRTransformLayerEmit(IRTransformLayer: TLLVMOrcIRTransformLayerRef; MR: TLLVMOrcMaterializationResponsibilityRef; TSM: TLLVMOrcThreadSafeModuleRef); cdecl; external libllvm;
procedure LLVMOrcIRTransformLayerSetTransform(IRTransformLayer: TLLVMOrcIRTransformLayerRef; TransformFunction: TLLVMOrcIRTransformLayerTransformFunction; Ctx: pointer); cdecl; external libllvm;
procedure LLVMOrcObjectTransformLayerSetTransform(ObjTransformLayer: TLLVMOrcObjectTransformLayerRef; TransformFunction: TLLVMOrcObjectTransformLayerTransformFunction; Ctx: pointer); cdecl; external libllvm;
function LLVMOrcCreateLocalIndirectStubsManager(TargetTriple: pchar): TLLVMOrcIndirectStubsManagerRef; cdecl; external libllvm;
procedure LLVMOrcDisposeIndirectStubsManager(ISM: TLLVMOrcIndirectStubsManagerRef); cdecl; external libllvm;
function LLVMOrcCreateLocalLazyCallThroughManager(TargetTriple: pchar; ES: TLLVMOrcExecutionSessionRef; ErrorHandlerAddr: TLLVMOrcJITTargetAddress; LCTM: PLLVMOrcLazyCallThroughManagerRef): TLLVMErrorRef; cdecl; external libllvm;
procedure LLVMOrcDisposeLazyCallThroughManager(LCTM: TLLVMOrcLazyCallThroughManagerRef); cdecl; external libllvm;
function LLVMOrcCreateDumpObjects(DumpDir: pchar; IdentifierOverride: pchar): TLLVMOrcDumpObjectsRef; cdecl; external libllvm;
procedure LLVMOrcDisposeDumpObjects(DumpObjects: TLLVMOrcDumpObjectsRef); cdecl; external libllvm;
function LLVMOrcDumpObjects_CallOperator(DumpObjects: TLLVMOrcDumpObjectsRef; ObjBuffer: PLLVMMemoryBufferRef): TLLVMErrorRef; cdecl; external libllvm;

// === Konventiert am: 20-9-26 17:11:14 ===


{$ENDIF read_interface}


{$IFDEF read_implementation}



{$ENDIF read_implementation}
